--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,66 @@ body {
   font-size: 1.125rem;
 }
 
+.leftBack {
+  opacity: .5;
+  position: absolute;
+}
+
+@media (max-width: 780px) {
+  .leftBack {
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background: darkgreen;
+  }
+}
+
+@media (min-width: 780px) and (max-width: 1024px) {
+  .leftBack {
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 50%;
+    background: darkgreen;
+  }
+}
+
+@media (min-width: 1024px) {
+  .leftBack {
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 50%;
+    background: darkgreen;
+  }
+}
+
+.rightBack {
+  opacity: .5;
+  position: absolute;
+}
+
+@media (min-width: 780px) and (max-width: 1024px) {
+  .rightBack {
+    top: 70%;
+    right: 0;
+    width: 80%;
+    height: 20%;
+    background: darkgreen;
+  }
+}
+
+@media (min-width: 1024px) {
+  .rightBack {
+    top: 70%;
+    right: 0;
+    width: 80%;
+    height: 20%;
+    background: darkgreen;
+  }
+}
+
 .scroll a {
   position: absolute;
   bottom: 10%;
