--- a/css/main.scss
+++ b/css/main.scss
@@ -1,29 +1,19 @@
 //・・・・・・・ 全体共通設定・・・・・・・
 body {
   font-family: 'Rajdhani', sans-serif;
-  box-sizing: border-box;
 }
 
 //・・・・・・・ 背景色設定・・・・・・・
-@mixin white ($background: #F7F7F7 , $color: #333333, $width: 100%){
+@mixin white ($background: #F7F7F7 , $color: #333333, $width: 100vw){
   background: $background;
   color: $color;
   width: $width;
 }
 
-@mixin black ($background: #969595 , $color: #EAEAEA, $width: 100%){
+@mixin black ($background: #969595 , $color: #EAEAEA, $width: 100vw){
   background: $background;
   color: $color;
   width: $width;
-}
-
-//・・・・・・・ リンクカラー設定・・・・・・・
-@mixin linkColor($color) {
-  color: $color;
-  
-  &:hover, &:active, &:focus {
-      color: lighten($color, 20%);
-  }
 }
 
 //・・・・・・・ フォントサイズ 設定・・・・・・・
@@ -69,17 +59,111 @@ $tab: 780px; // タブレット
   }
 }
 
-
 //・・・・・・・ 中央揃え設定・・・・・・・
 @mixin center {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50% ,-50%);
-  -webkit-transform: translate(-50% ,-50%);
-  -moz-transform: translate(-50% ,-50%);
-  -ms-transform: translate(-50% ,-50%);
-  -o-transform: translate(-50% ,-50%);
+  transform: translate(-50% , -50%);
+  -webkit-transform: translate(-50% , -50%);
+  -moz-transform: translate(-50% , -50%);
+  -ms-transform: translate(-50% , -50%);
+  -o-transform: translate(-50% , -50%);
+}
+
+//・・・・・・・ 中央揃えトランスフォーム設定・・・・・・・
+@mixin centertransform {
+  transform: translate(-50%);
+  -webkit-transform: translate(-50%);
+  -moz-transform: translate(-50%);
+  -ms-transform: translate(-50%);
+  -o-transform: translate(-50%);
+}
+
+//・・・・・・・ 真円設定・・・・・・・
+@mixin circle {
+  border-radius: 100%;
+  -webkit-border-radius: 100%;
+  -moz-border-radius: 100%;
+  -ms-border-radius: 100%;
+  -o-border-radius: 100%;
+}
+
+//・・・・・・・ 背景アニメーション設定・・・・・・・
+@mixin SpfadeInBack {
+  @keyframes SpfadeInBack {
+    0% {
+        opacity:0;
+        transform: translate3d(-100vw,0,0);
+        -webkit-transform: translate3d(-100vw,0,0);
+        -moz-transform: translate3d(-100vw,0,0);
+        -ms-transform: translate3d(-100vw,0,0);
+        -o-transform: translate3d(-100vw,0,0);
+}
+    100% {
+        opacity:.5;
+        transform: translate3d(0,0,0);
+        -webkit-transform: translate3d(0,0,0);
+        -moz-transform: translate3d(0,0,0);
+        -ms-transform: translate3d(0,0,0);
+        -o-transform: translate3d(0,0,0);
+      }
+  }
+}
+
+@mixin LeftTopkey {
+  @keyframes LeftfadeInBack {
+    0% {
+      opacity:0;
+      transform: translate3d(-50%,0,0);
+      -webkit-transform: translate3d(-50%,0,0);
+      -moz-transform: translate3d(-50%,0,0);
+      -ms-transform: translate3d(-50%,0,0);
+      -o-transform: translate3d(-50%,0,0);
+    }
+    100% {
+      opacity:.5;
+      transform: translate3d(0,0,0);
+      -webkit-transform: translate3d(0,0,0);
+      -moz-transform: translate3d(0,0,0);
+      -ms-transform: translate3d(0,0,0);
+      -o-transform: translate3d(0,0,0);
+    }
+  }
+}
+
+@mixin RightTopkey {
+  @keyframes RightfadeInBack {
+    0% {
+      opacity:0;
+      transform: translate3d(100vw,0,0);
+      -webkit-transform: translate3d(100vw,0,0);
+      -moz-transform: translate3d(100vw,0,0);
+      -ms-transform: translate3d(100vw,0,0);
+      -o-transform: translate3d(100vw,0,0);
+    }
+    100% {
+      opacity:.5;
+      transform: translate3d(0,0,0);
+      -webkit-transform: translate3d(0,0,0);
+      -moz-transform: translate3d(0,0,0);
+      -ms-transform: translate3d(0,0,0);
+      -o-transform: translate3d(0,0,0);
+    }
+  }
+}
+
+//・・・・・・・ ヘッダー設定・・・・・・・
+@mixin header {
+  display: inline-block;
+        text-align: center;
+        height: 50px;
+        line-height: 50px;
+        border: 1px solid #EAEAEA;
+        border-top: 0;
+        a {
+          color: #EAEAEA;
+        }
 }
 
 // ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝ここまでmixin設定＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
@@ -90,146 +174,204 @@ $tab: 780px; // タブレット
   position: relative;
   @include white;
   height: 100vh;
+  &__inner {
+    @include center;
+    h1 {
+      @include fontsize(30);
+      text-align: center;
+      margin-bottom: 30px;
+    }
+    p {
+      @include fontsize(24);
+      line-height: 1.5;
+    }
+  }
 }
 
-.TopVisual__inner {
-  @include center;
-  h1 {
-    @include fontsize(26);
-    margin-bottom: 20px;
+// テキストフェードイン
+.effect-fade__text {
+  animation: fadeInText 4s ease-in 0s 1 normal;
+  -webkit-animation: fadeInText 4s ease-in 0s 1 normal;
+}
+@keyframes fadeInText {
+  0% {
+    opacity: 0
   }
-  p {
-    @include fontsize(18);
+  100% {
+    opacity: 1
   }
 }
 
 
+
+// 背景フェードイン
 .leftBack {
-  opacity: .5;
   position: absolute;
-  @include sp {
-    top: 0;
-    left: 0;
-    width: 50%;
-    height: 100%;
-    background: darkgreen;
-  }
+  opacity: .5;
+
+  @include sp{
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 100vh 100vw 0 0;
+    border-color: #333 transparent transparent transparent;
+    animation: SpfadeInBack 4s ease-in 0s 1 normal;
+    -webkit-animation: SpfadeInBack 4s ease-in 0s 1 normal;
+    @include SpfadeInBack;
+}
 
   @include tab {
     top: 0;
     left: 0;
     width: 50%;
-    height: 50%;
-    background: darkgreen;
-  }
+    height: 60%;
+    background: #333;
+    animation: LeftfadeInBack 4s ease-in 0s 1 normal;
+    -webkit-animation: LeftfadeInBack 4s ease-in 0s 1 normal;
+    @include LeftTopkey;
+}
 
   @include pc {
     top: 0;
     left: 0;
     width: 50%;
-    height: 50%;
-    background: darkgreen;
+    height: 60%;
+    background: #333;
+    animation: LeftfadeInBack 4s ease-in 0s 1 normal;
+    -webkit-animation: LeftfadeInBack 4s ease-in 0s 1 normal;
+    @include LeftTopkey;
   }
 }
 
 .rightBack {
-  opacity: .5;
   position: absolute;
+  opacity: .5;
+  animation: RightfadeInBack 4s ease-in 0s 1 normal;
+  -webkit-animation: RightfadeInBack 4s ease-in 0s 1 normal;
+
   @include tab {
     top: 70%;
     right: 0;
     width: 80%;
-    height: 20%;
-    background: darkgreen;
+    height: 10%;
+    background: #333;
+    @include RightTopkey;
   }
 
   @include pc {
     top: 70%;
     right: 0;
     width: 80%;
-    height: 20%;
-    background: darkgreen;
+    height: 10%;
+    background: #333;
+    @include RightTopkey;
   }
 }
 
 // スクロール誘導
 .scroll {
   a {
+  color: #333333;
   position: absolute;
-  bottom: 10%;
+  bottom: 15%;
   left: 50%;
-  transform: translate(0, -50%);
-  -webkit-transform: translate(0, -50%);
-  -moz-transform: translate(0, -50%);
-  -ms-transform: translate(0, -50%);
-  -o-transform: translate(0, -50%);
+  @include centertransform;
+  @include fontsize(24);
   z-index: 2;
-  @include linkColor(#6e1b1b);
 }
 
 span {
   position: absolute;
-  top: 20px;
+  bottom: 5%;
   left: 50%;
-  transform: translate(-50%);
-  -webkit-transform: translate(-50%);
-  -ms-transform: translate(-50%);
-  width: 30px;
-  height: 30px;
+  @include centertransform;
+  width: 50px;
+  height: 50px;
   border: 1px solid rgb(80, 80, 80);
-  border-radius: 100%;
-  -webkit-border-radius: 100%;
-  -moz-border-radius: 100%;
-  -ms-border-radius: 100%;
-  -o-border-radius: 100%;
+  @include circle;
   animation: wave 3s infinite;
   -webkit-animation: wave 3s infinite;
 }
 
 span::after {
   content: '';
-  // 中央寄せ高さ：円の高さ30px/2=15px 三角形の中心高さ5px 15-5=10px）
+  // 中央寄せ高さ：円の高さ50px/2=25px 三角形の中心高さ10px 25-10=15px
   position: absolute;
-  top: 10px;
+  top: 15px;
   left: 50%;
-  transform: translate(-50%);
-  -webkit-transform: translate(-50%);
-  -moz-transform: translate(-50%);
-  -ms-transform: translate(-50%);
-  -o-transform: translate(-50%);
+  @include centertransform;
   width: 0;
   height: 0;
   border-style: solid;
-  border-width: 10px 10px 0 10px;
+  border-width: 26px 15px 0 15px;
   border-color: rgba(80, 80, 80, .5) transparent transparent transparent;
 }
 @keyframes wave {
-0% {
-  opacity: 0.2;
-}
-30% {
-  opacity: 1;
-}
-90% {
-  opacity: 0;
-  box-shadow: 0 0 10px 50px rgb(30, 30, 30);
-}
-100% {
-  opacity: 0;
-}
-}
+    0% {
+      opacity: 0.2;
+    }
+    30% {
+      opacity: 1;
+    }
+    90% {
+      opacity: 0;
+      box-shadow: 0 0 10px 30px rgb(150, 150, 150) ;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
 }
 
 
 // ・・・・・・・・・header・・・・・・・・・
 .Header {
+  position: relative;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
   @include black;
-  
+  opacity: .8;
+  box-shadow: 0px 9px 3px -3px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0px 9px 3px -3px rgba(0,0,0,0.1);
+  -moz-box-shadow: 0px 9px 3px -3px rgba(0,0,0,0.1);
+  z-index: 10;
+
+  .Header-inner {
+  font-size: 0;  // inline-blockで生じる余白消し
+    &__list {
+      @include sp {
+        @include header;
+        @include fontsize(18);  // 余白消しで0にしたフォントサイズの再設定
+        width: calc(100% / 3);
+      }
+      @include tab {
+        @include header;
+        @include fontsize(18);  // 余白消しで0にしたフォントサイズの再設定
+        width: calc(100% / 6);
+      }
+      @include pc {
+        @include header;
+        @include fontsize(18);  // 余白消しで0にしたフォントサイズの再設定
+        width: calc(100% / 6);
+      }
+    }
+
+    &__list:hover {
+      background: #cfcfcf;
+      a {
+        color: rgb(66, 66, 66);
+      }
+    }
+  }
 }
 
 // ・・・・・・・・・about・・・・・・・・・
 .About {
+  height: 3000px;
   @include white;
+  padding-top: 30px;
+  position: relative;
 }
 
 .About-photo {
@@ -238,11 +380,7 @@ span::after {
 img {
   width: 100%;
   height: 100%;
-  border-radius: 100%;
-  -webkit-border-radius: 100%;
-  -moz-border-radius: 100%;
-  -ms-border-radius: 100%;
-  -o-border-radius: 100%;
+  @include circle;
 }
 }
 // ・・・・・・・・・skill・・・・・・・・・
