--- a/css/main.css
+++ b/css/main.css
@@ -371,13 +371,28 @@ body {
   color: #424242;
 }
 
+.main-visual {
+  position: relative;
+  width: 100%;
+  height: 300px;
+}
+
+.slideshow img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.slideshow__img {
+  object-position: 0 50%;
+}
+
 .About {
-  height: 3000px;
   background: #F7F7F7;
   color: #333333;
   width: 100vw;
-  padding-top: 30px;
-  position: relative;
+  height: 4000px;
 }
 
 .About-photo {
