--- a/css/main.css
+++ b/css/main.css
@@ -371,23 +371,6 @@ body {
   color: #424242;
 }
 
-.main-visual {
-  position: relative;
-  width: 100%;
-  height: 300px;
-}
-
-.slideshow img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.slideshow__img {
-  object-position: 0 50%;
-}
-
 .About {
   background: #F7F7F7;
   color: #333333;
@@ -395,12 +378,70 @@ body {
   height: 4000px;
 }
 
-.About-photo {
+.main-visual {
+  width: 100%;
+  height: 70vw;
+  position: relative;
+}
+
+.slideshow__img--1 {
+  background-image: url(../img/fukuoka.jpeg);
+  background-size: cover;
+  background-position-y: 20%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  filter: grayscale(80%);
+  -webkit-filter: grayscale(80%);
+}
+
+.slideshow__img--2 {
+  background-image: url(../img/momochi.jpeg);
+  background-size: cover;
+  background-position-y: 20%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  filter: grayscale(80%);
+  -webkit-filter: grayscale(80%);
+}
+
+.slideshow__img--3 {
+  background-image: url(../img/Canal.jpeg);
+  background-size: cover;
+  background-position-y: 20%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  filter: grayscale(80%);
+  -webkit-filter: grayscale(80%);
+}
+
+.slideshow__img--4 {
+  background-image: url(../img/nightvew.jpeg);
+  background-size: cover;
+  background-position-y: 20%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  filter: grayscale(80%);
+  -webkit-filter: grayscale(80%);
+}
+
+.About-flex__photo {
   width: 120px;
   height: 120px;
 }
 
-.About-photo img {
+.About-flex__photo img {
   width: 100%;
   height: 100%;
   border-radius: 100%;
