--- a/css/main.scss
+++ b/css/main.scss
@@ -89,7 +89,7 @@ $tab: 780px; // タブレット
   -o-border-radius: 100%;
 }
 
-//・・・・・・・ 背景アニメーション設定・・・・・・・
+//・・・・・・・ トップアニメーション設定・・・・・・・
 @mixin SpfadeInBack {
   @keyframes SpfadeInBack {
     0% {
@@ -164,6 +164,20 @@ $tab: 780px; // タブレット
         a {
           color: #EAEAEA;
         }
+}
+
+
+//・・・・・・・ アバウト背景設定・・・・・・・
+@mixin Backgroundimg {
+  background-size: cover;
+  background-position-y: 20%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  filter: grayscale(80%);
+  -webkit-filter: grayscale(80%);
 }
 
 // ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝ここまでmixin設定＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
@@ -367,37 +381,46 @@ span::after {
 }
 
 // ・・・・・・・・・about・・・・・・・・・
-.main-visual {
-  position: relative;
-  width: 100%;
-  height: 300px;
-}
-
-.slideshow img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.slideshow__img {
-  object-position: 0 50%;
-}
-
 .About {
   @include white;
   height: 4000px;
 }
 
-.About-photo {
+.main-visual {
+  width: 100%;
+  height: 70vw;
+  position: relative;
+}
+
+.slideshow__img--1 {
+  background-image: url(../img/fukuoka.jpeg);
+  @include Backgroundimg;
+}
+.slideshow__img--2 {
+  background-image: url(../img/momochi.jpeg);
+  @include Backgroundimg;
+}
+.slideshow__img--3 {
+  background-image: url(../img/Canal.jpeg);
+  @include Backgroundimg;
+}
+.slideshow__img--4 {
+  background-image: url(../img/nightvew.jpeg);
+  @include Backgroundimg;
+}
+
+.About-flex {
+  &__photo {
   width: 120px;
   height: 120px;
-img {
-  width: 100%;
-  height: 100%;
-  @include circle;
+    img {
+    width: 100%;
+    height: 100%;
+    @include circle;
+    }
+  }
 }
-}
+
 // ・・・・・・・・・skill・・・・・・・・・
 .Skill {
   @include black;
