--- a/css/main.css
+++ b/css/main.css
@@ -375,65 +375,14 @@ body {
   background: #F7F7F7;
   color: #333333;
   width: 100vw;
-  height: 4000px;
 }
 
-.main-visual {
-  width: 100%;
-  height: 70vw;
+.About__block {
   position: relative;
-}
-
-.slideshow__img--1 {
-  background-image: url(../img/fukuoka.jpeg);
-  background-size: cover;
-  background-position-y: 20%;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  position: absolute;
-  width: 100%;
+  background: #F7F7F7;
+  color: #333333;
+  width: 100vw;
   height: 100%;
-  filter: grayscale(80%);
-  -webkit-filter: grayscale(80%);
-}
-
-.slideshow__img--2 {
-  background-image: url(../img/momochi.jpeg);
-  background-size: cover;
-  background-position-y: 20%;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  filter: grayscale(80%);
-  -webkit-filter: grayscale(80%);
-}
-
-.slideshow__img--3 {
-  background-image: url(../img/Canal.jpeg);
-  background-size: cover;
-  background-position-y: 20%;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  filter: grayscale(80%);
-  -webkit-filter: grayscale(80%);
-}
-
-.slideshow__img--4 {
-  background-image: url(../img/nightvew.jpeg);
-  background-size: cover;
-  background-position-y: 20%;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  filter: grayscale(80%);
-  -webkit-filter: grayscale(80%);
 }
 
 .About-flex__photo {
@@ -451,31 +400,119 @@ body {
   -o-border-radius: 100%;
 }
 
+.main-visual {
+  width: 100%;
+  height: 75vw;
+  position: relative;
+}
+
+.slideshow__img--1 {
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  filter: grayscale(80%);
+  -webkit-filter: grayscale(80%);
+  background-image: url(../img/hakata.jpeg);
+}
+
+@media (max-width: 780px) {
+  .slideshow__img--1 {
+    background-image: url(../img/sptower.jpeg);
+  }
+}
+
+.slideshow__img--2 {
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  filter: grayscale(80%);
+  -webkit-filter: grayscale(80%);
+  background-image: url(../img/momochi.jpeg);
+}
+
+@media (max-width: 780px) {
+  .slideshow__img--2 {
+    background-image: url(../img/spyamagasa.jpeg);
+  }
+}
+
+.slideshow__img--3 {
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  filter: grayscale(80%);
+  -webkit-filter: grayscale(80%);
+  background-image: url(../img/canal.jpeg);
+}
+
+@media (max-width: 780px) {
+  .slideshow__img--3 {
+    background-image: url(../img/spnakasu.jpeg);
+  }
+}
+
+.slideshow__img--4 {
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  filter: grayscale(80%);
+  -webkit-filter: grayscale(80%);
+  background-image: url(../img/nightvew.jpeg);
+}
+
+@media (max-width: 780px) {
+  .slideshow__img--4 {
+    background-image: url(../img/sphakatabay.jpeg);
+  }
+}
+
 .Skill {
+  position: relative;
   background: #969595;
   color: #EAEAEA;
   width: 100vw;
+  height: 3000px;
 }
 
 .Work {
+  position: relative;
   background: #F7F7F7;
   color: #333333;
   width: 100vw;
 }
 
 .Price {
+  position: relative;
   background: #969595;
   color: #EAEAEA;
   width: 100vw;
 }
 
 .Contact {
+  position: relative;
   background: #F7F7F7;
   color: #333333;
   width: 100vw;
 }
 
 .Footer {
+  position: relative;
   background: #969595;
   color: #EAEAEA;
   width: 100vw;
