--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,23 @@
 body {
   font-family: 'Rajdhani', sans-serif;
+  font-size: 62.5%;
 }
 
 @media (min-width: 1024px) {
   :root {
-    font-size: 18px;
+    font-size: 20px;
   }
 }
 
-@media (min-width: 780px) and (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 1024px) {
+  :root {
+    font-size: calc(1rem + ((1vw - 7.68px) * 1.5625));
+  }
+}
+
+@media (max-width: 768px) {
   :root {
     font-size: 16px;
-  }
-}
-
-@media (max-width: 780px) {
-  :root {
-    font-size: 14px;
   }
 }
 
@@ -40,15 +41,15 @@ body {
 }
 
 .TopVisual__inner h1 {
-  font-size: 30px;
-  font-size: 1.875rem;
   text-align: center;
   margin-bottom: 30px;
+  font-size: 30px;
+  font-size: 1.875rem;
 }
 
 .TopVisual__inner p {
-  font-size: 24px;
-  font-size: 1.5rem;
+  font-size: 20px;
+  font-size: 1.25rem;
   line-height: 1.5;
 }
 
@@ -71,7 +72,7 @@ body {
   opacity: .5;
 }
 
-@media (max-width: 780px) {
+@media (max-width: 768px) {
   .leftBack {
     width: 0;
     height: 0;
@@ -101,7 +102,7 @@ body {
   }
 }
 
-@media (min-width: 780px) and (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 1024px) {
   .leftBack {
     top: 0;
     left: 0;
@@ -168,7 +169,7 @@ body {
   -webkit-animation: RightfadeInBack 4s ease-in 0s 1 normal;
 }
 
-@media (min-width: 780px) and (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 1024px) {
   .rightBack {
     top: 70%;
     right: 0;
@@ -225,6 +226,8 @@ body {
 }
 
 .scroll a {
+  font-size: 16px;
+  font-size: 1rem;
   color: #333333;
   position: absolute;
   bottom: 15%;
@@ -234,8 +237,6 @@ body {
   -moz-transform: translate(-50%);
   -ms-transform: translate(-50%);
   -o-transform: translate(-50%);
-  font-size: 24px;
-  font-size: 1.5rem;
   z-index: 2;
 }
 
@@ -312,7 +313,7 @@ body {
   font-size: 0;
 }
 
-@media (max-width: 780px) {
+@media (max-width: 768px) {
   .Header .Header-inner__list {
     display: inline-block;
     text-align: center;
@@ -320,8 +321,8 @@ body {
     line-height: 50px;
     border: 1px solid #EAEAEA;
     border-top: 0;
-    font-size: 18px;
-    font-size: 1.125rem;
+    font-size: 14px;
+    font-size: 0.875rem;
     width: calc(100% / 3);
   }
   .Header .Header-inner__list a {
@@ -329,7 +330,7 @@ body {
   }
 }
 
-@media (min-width: 780px) and (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 1024px) {
   .Header .Header-inner__list {
     display: inline-block;
     text-align: center;
@@ -337,8 +338,8 @@ body {
     line-height: 50px;
     border: 1px solid #EAEAEA;
     border-top: 0;
-    font-size: 18px;
-    font-size: 1.125rem;
+    font-size: 16px;
+    font-size: 1rem;
     width: calc(100% / 6);
   }
   .Header .Header-inner__list a {
@@ -354,8 +355,8 @@ body {
     line-height: 50px;
     border: 1px solid #EAEAEA;
     border-top: 0;
-    font-size: 18px;
-    font-size: 1.125rem;
+    font-size: 16px;
+    font-size: 1rem;
     width: calc(100% / 6);
   }
   .Header .Header-inner__list a {
@@ -378,31 +379,114 @@ body {
 }
 
 .About__block {
-  position: relative;
-  background: #F7F7F7;
-  color: #333333;
-  width: 100vw;
-  height: 100%;
-}
-
-.About-flex__photo {
-  width: 120px;
-  height: 120px;
-}
-
-.About-flex__photo img {
   width: 100%;
-  height: 100%;
-  border-radius: 100%;
-  -webkit-border-radius: 100%;
-  -moz-border-radius: 100%;
-  -ms-border-radius: 100%;
-  -o-border-radius: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 30px 20px;
+}
+
+.About__block h2 {
+  font-size: 30px;
+  font-size: 1.875rem;
+  text-align: center;
+}
+
+.About-flex {
+  display: flex;
+  margin-top: 30px;
+  font-size: 16px;
+  font-size: 1rem;
+}
+
+@media (max-width: 768px) {
+  .About-flex {
+    flex-direction: column;
+  }
+  .About-flex__photo {
+    max-width: 250px;
+    margin: 0 auto;
+  }
+  .About-flex__photo img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 100%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
+  }
+  .About-flex__text {
+    margin-top: 30px;
+  }
+  .About-flex__text--name {
+    margin-bottom: 10px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .About-flex {
+    justify-content: space-around;
+    align-items: center;
+  }
+  .About-flex__photo {
+    width: 30%;
+  }
+  .About-flex__photo img {
+    width: 100%;
+    height: auto;
+    border-radius: 100%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
+  }
+  .About-flex__text {
+    width: 50%;
+    margin-top: 30px;
+    line-height: 1.5;
+  }
+  .About-flex__text--name {
+    margin-bottom: 30px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .About-flex {
+    justify-content: space-around;
+    align-items: center;
+  }
+  .About-flex__photo {
+    width: 30%;
+  }
+  .About-flex__photo img {
+    width: 100%;
+    height: auto;
+    border-radius: 100%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
+  }
+  .About-flex__text {
+    width: 50%;
+    margin-top: 30px;
+    line-height: 1.5;
+  }
+  .About-flex__text--name {
+    margin-bottom: 30px;
+  }
+}
+
+.About__theme {
+  margin-top: 30px;
+  font-size: 14px;
+  font-size: 0.875rem;
+  line-height: 2;
 }
 
 .main-visual {
   width: 100%;
-  height: 75vw;
+  height: 70vh;
   position: relative;
 }
 
@@ -419,7 +503,7 @@ body {
   background-image: url(../img/hakata.jpeg);
 }
 
-@media (max-width: 780px) {
+@media (max-width: 768px) {
   .slideshow__img--1 {
     background-image: url(../img/sptower.jpeg);
   }
@@ -438,7 +522,7 @@ body {
   background-image: url(../img/momochi.jpeg);
 }
 
-@media (max-width: 780px) {
+@media (max-width: 768px) {
   .slideshow__img--2 {
     background-image: url(../img/spyamagasa.jpeg);
   }
@@ -457,7 +541,7 @@ body {
   background-image: url(../img/canal.jpeg);
 }
 
-@media (max-width: 780px) {
+@media (max-width: 768px) {
   .slideshow__img--3 {
     background-image: url(../img/spnakasu.jpeg);
   }
@@ -476,14 +560,13 @@ body {
   background-image: url(../img/nightvew.jpeg);
 }
 
-@media (max-width: 780px) {
+@media (max-width: 768px) {
   .slideshow__img--4 {
     background-image: url(../img/sphakatabay.jpeg);
   }
 }
 
 .Skill {
-  position: relative;
   background: #969595;
   color: #EAEAEA;
   width: 100vw;
@@ -491,28 +574,24 @@ body {
 }
 
 .Work {
-  position: relative;
   background: #F7F7F7;
   color: #333333;
   width: 100vw;
 }
 
 .Price {
-  position: relative;
   background: #969595;
   color: #EAEAEA;
   width: 100vw;
 }
 
 .Contact {
-  position: relative;
   background: #F7F7F7;
   color: #333333;
   width: 100vw;
 }
 
 .Footer {
-  position: relative;
   background: #969595;
   color: #EAEAEA;
   width: 100vw;
